[gd_scene load_steps=13 format=2]

[ext_resource path="res://Entity/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entity/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Resources/Player/player4.png" type="Texture" id=3]
[ext_resource path="res://Resources/Player/player2.png" type="Texture" id=4]
[ext_resource path="res://Resources/Player/player3.png" type="Texture" id=5]
[ext_resource path="res://Resources/Player/player.png" type="Texture" id=6]
[ext_resource path="res://Resources/xirod.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Resources/SoundEffects/fire.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 30.0

[sub_resource type="DynamicFont" id=4]
size = 35
outline_size = 3
outline_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 35
outline_size = 3
outline_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
font_data = ExtResource( 7 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" instance=ExtResource( 1 )]
z_index = 100
collision_layer = 65
script = ExtResource( 2 )
MOVE_SPEED = 300
entity_name = "Okram"

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="." index="1"]
current = true
smoothing_enabled = true

[node name="Shadow" parent="." index="2"]
position = Vector2( -4, 30 )
scale = Vector2( 3.5, 1 )

[node name="InvulTimer" type="Timer" parent="." index="3"]
one_shot = true

[node name="Label" type="Label" parent="." index="4"]
margin_left = -250.0
margin_top = -80.0
margin_right = 250.0
margin_bottom = -37.0
custom_colors/font_color = Color( 0.0313726, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "OKRAM"
align = 1
valign = 1

[node name="Label2" type="Label" parent="." index="5"]
margin_left = -250.0
margin_top = -125.0
margin_right = 250.0
margin_bottom = -82.0
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1

[node name="AnimatedSprite" parent="." index="6"]
frames = SubResource( 3 )
playing = true

[node name="FlashTimer" type="Timer" parent="." index="7"]
wait_time = 0.1
one_shot = true

[node name="ShieldTimer" type="Timer" parent="." index="8"]
wait_time = 10.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="9"]
stream = ExtResource( 8 )
volume_db = 5.0

[connection signal="timeout" from="ShieldTimer" to="." method="_on_ShieldTimer_timeout"]
